# HyperCapslock

./: .gitignore  AGENTS.md  README.md  README_CN.md  README_DE.md  README_JA.md  RELEASE_NOTES.html  RELEASE_NOTES.md  bump_version.ps1  double-tap-design.html  how_does_it_work.md  index.html  package-lock.json  package.json  project.yml  vite.config.ts
.claude/skills/release/: SKILL.md
.gemini/: GEMINI.md
.githooks/: pre-commit
.github/workflows/: build.yml  release.yml  test-dispatch.yml
HyperCapslock/Resources/: HyperCapslock.entitlements  Info.plist
HyperCapslock/Sources/: main.swift
HyperCapslock/Sources/Engine/: ActionExecutor.swift  CapsHoldCenter.swift  CapsLockState.swift  Constants.swift  EngineState.swift  FrontmostAppTracker.swift  HidUtil.swift  InputSource.swift  InputSourceFix.swift  KeyCodes.swift  KeyPoster.swift  KeyboardHook.swift  ModifierDoubleTap.swift
HyperCapslock/Sources/Localization/: L10n.swift
HyperCapslock/Sources/Model/: Action.swift  ActionModel.swift  ActionsRegistry.swift  AppConfig.swift  BuiltinActions.swift  ConfigStore.swift  KeyRemap.swift  MappingBinding.swift  MappingsRegistry.swift  UsageStats.swift
HyperCapslock/Sources/Support/: AnyDragCapsHoldBridge.swift  AppEnvironment.swift  FileLog.swift  HudCenter.swift  LaunchAtLogin.swift  Permissions.swift  UpdaterManager.swift
HyperCapslock/Sources/UI/: ActionsPage.swift  AddEditActionView.swift  AddEditMappingView.swift  AppChooser.swift  AppDelegate.swift  AppState.swift  ContentView.swift  FooterView.swift  FrontmostAppHud.swift  HudController.swift  HudView.swift  (+12 more)
HyperCapslockTests/: HyperCapslockTests.swift
HyperCapslockUITests/: BehaviorUITests.swift  NavigationUITests.swift
docs/: agentcursor-engine.md  macOS_impl.md  testing-on-headless-macs.md
docs/archived/: 2026-05-16-modifier-double-tap-design.md  README.md  double-tap-design.html  macOS_impl.md
docs/design/: 2026-05-23-per-app-scoped-mappings.html  2026-05-26-modifier-forwarding.md  2026-06-14-per-app-display-options.html  style-guide.md  ui-direction-mockups.html
docs/homebrew-cask/: README.md  hypercapslock.rb  submission-plan.html
docs/promotion/: awesome-lists.md
docs/research/: 2026-05-31-macos-independent-cursor-and-xcuitest.md
scripts/: bump-version.sh  render-release-notes.py  setup-git-hooks.sh
src/: App.css  App.tsx  Hud.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  hud.json
src-tauri/icons/: icon.icns
src-tauri/src/: hook_macos.rs  hook_windows.rs  lib.rs  main.rs
tools/agentcursor/: README.md  main.swift
(+7 files in other folders)
